// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsExamQuestionAutoScore /> renders displayNumber number when there are more than one answer 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <sup
    className="e-result-scorecount-sup e-mrg-r-1"
  >
    1
  </sup>
  <b>
    1
  </b>
   
  / 3 
   
   p.
</div>
`;

exports[`<ResultsExamQuestionAutoScore /> renders with score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <b>
    1
  </b>
   
  / 3 
   
   p.
</div>
`;

exports[`<ResultsExamQuestionAutoScore /> renders without score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-result-scorecount-empty"
  />
   
  / 3 
   
   p.
</div>
`;
